# SmartContract

./: Anchor.toml  Cargo.toml  package.json
programs/amm/: Cargo.toml
programs/amm/src/: lib.rs
tests/: amm.ts
