[package]
name = "amm"
version = "0.1.0"
description = "Simple constant product AMM"
edition = "2021"

[lib]
name = "amm"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
